Updated project settings.

--- a/BetterLogging/BetterLogging.csproj
+++ b/BetterLogging/BetterLogging.csproj
@@ -4,7 +4,25 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>BetterLogging</Title>
+    <Version>1.0.0-alpha260118</Version>
+    <Authors>TheNevix</Authors>
+    <Company>TheNevix</Company>
+    <Description>AI-powered exception analysis and structured logging for .NET.</Description>
+    <PackageProjectUrl></PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/TheNevix/BetterLogging</RepositoryUrl>
+    <PackageTags>logging;ai;exceptions;gemini;dotnet</PackageTags>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
