--- a/BetterLogging/BetterLogging.csproj
+++ b/BetterLogging/BetterLogging.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Title>BetterLogging</Title>
-    <Version>1.0.0-alpha260118</Version>
+    <Version>1.0.0-alpha260118-2</Version>
     <Authors>TheNevix</Authors>
     <Company>TheNevix</Company>
     <Description>AI-powered exception analysis and structured logging for .NET.</Description>
